# YMP

./: .gitignore
cpp/: CMakeLists.txt  d.cpp  loh.py
cpp/1бл/: main
cpp/1семестр/1бл/: main.cpp
cpp/1семестр/3бл/: main
cpp/1семестр/3бл/PI/: out2.txt  out3.txt  out4.txt  out5.txt  КовинВЕ_ЯП_prog1  КовинВЕ_ЯП_prog1.cpp  КовинВЕ_ЯП_prog2  КовинВЕ_ЯП_prog2.cpp  КовинВЕ_ЯП_prog3  КовинВЕ_ЯП_prog3.cpp  КовинВЕ_ЯП_prog4  КовинВЕ_ЯП_prog4.cpp  КовинВЕ_ЯП_prog5  КовинВЕ_ЯП_prog5.cpp
cpp/1семестр/4бл/: main.cpp
cpp/1семестр/5бл/: infile.txt  main  main.cpp  outfile.txt
cpp/1семестр/6бл/: main  output_quick.txt
cpp/1семестр/7бл/: 2  2.cpp  files.cpp  main  out.txt
cpp/1семестр/7бл/include/: files.h
cpp/1семестр/ар 24_10_25/: main.cpp
cpp/2бл/: main.cpp
cpp/2семестр/: data.txt  main  names.txt
cpp/2семестр/1блок/: data.txt  main  main.cpp  trash.cpp
cpp/2семестр/2блок/: classes.txt  main  main.cpp
cpp/2семестр/2блок/include/: Complex.h  Matrix.h  Polynom.h  Triangle.h  Vector.h
cpp/2семестр/2блок/src/: Complex.cpp  Matrix.cpp  Polynom.cpp  Triangle.cpp  Vector.cpp
cpp/2семестр/2блок/tests/: Matrix.txt  Triangles.ipynb  polynom.odt  sf.txt
cpp/2семестр/3блок/: main  main.cpp
cpp/2семестр/3блок/include/: Circle.h  Point.h
cpp/2семестр/3блок/src/: Circle.cpp  Point.cpp
cpp/2семестр/3блок/tests/: 1.ipynb  2.ipynb
cpp/2семестр/trash/: main
cpp/3бл/: main.cpp  out.txt
cpp/5бл/: main.cpp
cpp/6бл/: 6.txt  input.txt  main.cpp
cpp/7бл/: in.txt  main.cpp  matrix.cpp
cpp/7бл/include/: matrix.h
cpp/WEB/: index.html  style.css
(+20 files in other folders)
