cmake_minimum_required(VERSION 4.0)
project(_)

set(CMAKE_CXX_STANDARD 14)

add_executable(_
        1бл/main.cpp,
        2бл/main.cpp
        3бл/main.cpp
        "ар 24_10_25/main.cpp"
        "ар 24_10_25/main.cpp"
        4бл/main.cpp
        5бл/main.cpp
        d.cpp
        3бл/main.cpp
        3бл/main.cpp)
